// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer should match snapshot when there are cards to render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    cardsToRender={
        Array [
            Object {
              "homePop": "200000",
              "homeworld": "Tatooine",
              "name": "Darth Vader",
              "species": "Human",
            },
          ]
    }
    toggleTarget={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          card={
                    Object {
                              "homePop": "200000",
                              "homeworld": "Tatooine",
                              "name": "Darth Vader",
                              "species": "Human",
                            }
          }
          toggleTarget={[Function]}
/>,
      ],
      "className": "CardContainer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "card": Object {
            "homePop": "200000",
            "homeworld": "Tatooine",
            "name": "Darth Vader",
            "species": "Human",
          },
          "toggleTarget": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            card={
                        Object {
                                    "homePop": "200000",
                                    "homeworld": "Tatooine",
                                    "name": "Darth Vader",
                                    "species": "Human",
                                  }
            }
            toggleTarget={[Function]}
/>,
        ],
        "className": "CardContainer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "card": Object {
              "homePop": "200000",
              "homeworld": "Tatooine",
              "name": "Darth Vader",
              "species": "Human",
            },
            "toggleTarget": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardContainer should match snapshot when there are no cards to render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    cardsToRender={Array []}
    toggleTarget={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="loading-container"
>
        <img
                alt="Patience"
                id="patience"
                src="patience.gif"
        />
        <img
                alt="Patience"
                id="vader"
                src="vader3.jpg"
        />
</section>,
      "className": "CardContainer",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt="Patience"
            id="patience"
            src="patience.gif"
/>,
          <img
            alt="Patience"
            id="vader"
            src="vader3.jpg"
/>,
        ],
        "className": "loading-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Patience",
            "id": "patience",
            "src": "patience.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "Patience",
            "id": "vader",
            "src": "vader3.jpg",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "section",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="loading-container"
>
          <img
                    alt="Patience"
                    id="patience"
                    src="patience.gif"
          />
          <img
                    alt="Patience"
                    id="vader"
                    src="vader3.jpg"
          />
</section>,
        "className": "CardContainer",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="Patience"
              id="patience"
              src="patience.gif"
/>,
            <img
              alt="Patience"
              id="vader"
              src="vader3.jpg"
/>,
          ],
          "className": "loading-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Patience",
              "id": "patience",
              "src": "patience.gif",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Patience",
              "id": "vader",
              "src": "vader3.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
        ],
        "type": "section",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
